--- a/package.json
+++ b/package.json
@@ -1,46 +1,140 @@
 {
+  
   "name": "portfolio-rgt8",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
+  "homepage": "https://RohitRgt8.github.io/Personal-Portfolio",
+  
   "dependencies": {
-    "@popperjs/core": "^2.9.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.14.3",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+  
+    
+  "@popperjs/core": "^2.9.2",
+  
+    
+  "@testing-library/jest-dom": "^5.14.1",
+  
+    
+  "@testing-library/react": "^11.2.7",
+  
+    
+  "@testing-library/user-event": "^12.8.3",
+  
+    
+  "bootstrap": "^4.4.1",
+  
+    
+  "jquery": "^3.4.1",
+  
+    
+  "popper.js": "^1.14.3",
+  
+    
+  "react": "^17.0.2",
+  
+    
+  "react-bootstrap": "^1.6.1",
+  
+    
+  "react-dom": "^17.0.2",
+  
+    
+  "react-scripts": "4.0.3",
+  
+    
+  "web-vitals": "^1.1.2"
+  
   },
+  
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  
+    
+  "start": "react-scripts start",
+  
+    
+  "predeploy": "npm run build",
+  
+    
+  "deploy": "gh-pages -d build",
+  
+    
+  "build": "react-scripts build",
+  
+    
+  "test": "react-scripts test",
+  
+    
+  "eject": "react-scripts eject"
+  
   },
+  
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  
+    
+  "extends": [
+  
+    
+    
+  "react-app",
+  
+    
+    
+  "react-app/jest"
+  
+    
+  ]
+  
   },
+  
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  
+    
+  "production": [
+  
+    
+    
+  ">0.2%",
+  
+    
+    
+  "not dead",
+  
+    
+    
+  "not op_mini all"
+  
+    
+  ],
+  
+    
+  "development": [
+  
+    
+    
+  "last 1 chrome version",
+  
+    
+    
+  "last 1 firefox version",
+  
+    
+    
+  "last 1 safari version"
+  
+    
+  ]
+  
   },
+  
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.2.0"
+  
+    
+  "eslint-plugin-react-hooks": "^4.2.0",
+  
+    
+  "gh-pages": "^3.2.3"
+  
   }
 }
