--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   
   "private": true,
   
-  "homepage": "https://RohitRgt8.github.io/Personal-Portfolio",
+    "homempage":"https://rohitrgt8.github.io/PersonalPortfolio",
   
   "dependencies": {
   
@@ -39,6 +39,9 @@
   
     
   "react-dom": "^17.0.2",
+  
+    
+  "react-router-dom": "^5.2.0",
   
     
   "react-scripts": "4.0.3",
