--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "portfolio-rgt8",
   
   "version": "0.1.0",
-"homepage": "http://gitname.github.io/PersonalPortfolio",
+"homepage": "http://rohitrgt8.github.io/PersonalPortfolio",
   
   "private": true,
 
