--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "name": "portfolio-rgt8",
   
   "version": "0.1.0",
-"homepage": "http://rohitrgt8.github.io/PersonalPortfolio",
+  
+  "homepage": "http://rohitrgt8.github.io/PersonalPortfolio",
   
   "private": true,
-
   
   "dependencies": {
   
@@ -41,10 +41,16 @@
   "react-dom": "^17.0.2",
   
     
+  "react-markdown": "^7.0.1",
+  
+    
   "react-router-dom": "^5.2.0",
   
     
   "react-scripts": "4.0.3",
+  
+    
+  "react-simplemde-editor": "^5.0.1",
   
     
   "web-vitals": "^1.1.2"
@@ -55,8 +61,11 @@
   
     
   "start": "react-scripts start",
-
-   "predeploy": "npm run build",
+  
+    
+  "predeploy": "npm run build",
+  
+    
   "deploy": "gh-pages -d build",
   
     
